Fix AdminController bean conflict and update backend